# fem_lfp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
scenarios/bbp/: scenario.py
scenarios/cylinder/: scenario.py
scenarios/ms_j7/: scenario.py
scripts/: bbp_compare.py  cylinder_compare.py  cylinder_pad_sweep.py  ms_j7_compare.py  ms_j7_diagnostic.py  ms_j7_lsa_simplified.py  three_cell_summary.py
scripts/diagnostics/: ms_j7_diagnostic.py  ms_j7_lsa_simplified.py
src/fem_lfp/: __init__.py  _geom.py  _mesh_util.py  fem.py  lsa.py  mesh_body_fitted.py  mesh_branched.py  mesh_cylinder.py  model.py  modeldb.py  neuron_sim.py  plotting.py
tests/: test_geom.py  test_lsa.py  test_model_helpers.py  test_modeldb.py
