[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fem_lfp"
version = "0.0.1"
description = "Hybrid LFP simulator: NEURON cable equation for intracellular dynamics + 3D FEM Poisson solve in extracellular space for V_e."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "fem_lfp contributors" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    # dolfinx + gmsh + neuron come from the conda env (fem_neuron-env)
]

[tool.setuptools.packages.find]
where = ["src"]
